# octopus-energy-exporter

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  rust.yml  rust_clippy.yml
src/: carbon_intensity.rs  main.rs  usage.rs
