[package]
name = "octopus-energy-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
prometheus = "0.13"
octopust = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12.20"
opentelemetry           = "0.22"
opentelemetry_sdk       = { version = "0.22", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp      = { version = "0.15", features = ["tls", "grpc-tonic", "metrics", "http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.15.0"
serde_json = "1.0"
warp = "0.3"