[package]
name = "octopus-energy-exporter"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
prometheus = "0.14"
octopust = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12.20"
opentelemetry           = "0.30"
opentelemetry_sdk       = { version = "0.30", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp      = { version = "0.30", features = ["tls", "grpc-tonic", "metrics", "http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.30.0"
serde_json = "1.0"
warp = "0.4"
clap = { version = "4.5.41", features = ["derive"] }
carbonintensity-api = "0.3.0"
env_logger = "0.11.8"
log = "0.4"
